header overlap fix

--- a/portfolio/css/custom.css
+++ b/portfolio/css/custom.css
@@ -4,7 +4,7 @@
     height: 90%;
     width: 90%;
     text-align: center;
-    background-color: orange;
+    /*background-color: orange;*/
 }
 
 @font-face {
